src/main/asciidoc/2.0.0/builtins/builtins-time.adoc
=== Time Built-Ins

The Built-Ins in the examples operate on the `java.time.LocalTime` respectively `java.sql.Time` value `12:34:56`.

==== `time` Built-In

This built-in returns the time part of the value.

NOTE: This built-in seems pointless at first because the result corresponds to the original value. However, it is often not certain what type the variable actually has. With a `datetime` value, the date would otherwise also be used without `?time`.

|===
| Interpolation | Output | Type

m|${temporal?time}
m|12:34:56
|time
|===

==== `c` (computer language) Built-In

This built-in returns a time string of the value.

|===
| Interpolation | Output | Type

m|${temporal?c}
m|12:34:56
|string
|===

==== `string` Built-In

This built-in returns a formatted string of the value.
footnote:legacyTemporal[]

|===
| Interpolation | Output | Type

m|${temporal?string('hh:mm')}
m|24. August 1968
|string
|===

==== `supports` Built-In (since 1.8.2)

This built-in returns `true` for the supported temporal units, `false` otherwise. From the currently available temporal units only `HOURS`, `MINUTES` and `SECONDS` are supported.

NOTE: This built-in exists for time values so that all temporal types can be checked for temporal units.

|===
| Interpolation | Output | Type

m|${temporal?supports('YEARS'}
m|false
|boolean

m|${temporal?supports('MONTHS'}
m|false
|boolean

m|${temporal?supports('DAYS'}
m|false
|boolean
|===
